# thu-stuff

bdi-hw1/: README.md
bdi-hw2/: main.ipynb
bdi-hw3-omniglot/: Untitled.ipynb
big-data-intelligence/bdi-hw1/: main.ipynb  requirements.txt
big-data-intelligence/bdi-hw2/: requirements.txt
big-data-intelligence/bdi-hw3-omniglot/: requirements.txt  utils.py
cna-oj-3/: patternpasswords.py
cna-oj-algo-1/: jagdish.py  jagdish3.c  naive.py
cna-oj-algo-2/: main.cpp
combinatorics-and-algorithms/cna-oj-4/: intpart.cpp
combinatorics-and-algorithms/cna-oj-algo-1/: degen.py  jagdish2.py
computer-graphics/: main2.cpp
computer-graphics/Assignment1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  main.vert.glsl  uni.vert.glsl
computer-graphics/Assignment2/Project1/: Project1.vcxproj  Project1.vcxproj.filters
computer-graphics/Assignment2/src/: SphereVertices.h  main.cpp
computer-graphics/Assignment3/: Project1.sln
computer-graphics/Assignment3/Project1/: Project1.vcxproj  Project1.vcxproj.filters
computer-graphics/Assignment3/src/: main.cpp
computer-graphics/Assignment4/Project1/: main.vert.glsl
computer-graphics/Assignment4/src/: main.cpp
computer-graphics/Assignment5/Project1/: Project1.vcxproj.filters  main.tes.glsl
computer-graphics/Assignment5/src/: main.cpp
computer-graphics/Assignment6/Project1/: Project1.vcxproj
computer-graphics/Tutorial3/: Tutorial3.cpp  Tutorial3_2.cpp
computer-graphics/Tutorial5/Tutorial5/Tutorial5_4/: CMakeLists.txt  main.cpp
computer-graphics/Tutorial6/Tutorial6/Tutorial6_3_stbi/Tutorial6_3_stbi/: CMakeLists.txt  main  main.cpp
deep-learning/dl_a1/: Assignment 1a logistic regression.ipynb  Assignment 1b softmax regression.ipynb
deep-learning/dl_a2/: Assignment 2 mlp.ipynb
deep-learning/dl_a3/: Assignment 3 cnn.ipynb
deep-learning/dl_a4/: Assignment 4 DL Framework.ipynb  environment.yml
deep-learning/dl_a5/: a5.ipynb
deep-learning/dl_a6/: homework6.ipynb
deep-learning/dl_a7/: a7.ipynb
ibds-hw-10/: pattern_counts.pickle  postprocess2.py  preprocess2.py
intro-to-big-data-systems/ibds-hw-10/: bdci_data.json  main.py  main2.py  postprocess.py  preprocess.py
machine-learning/ml-hw2-p5-newsgroups-em/: 未命名.ipynb
ml-hw3/: GLM-examples.ipynb
(+79 files in other folders)
